--- a/category-lifestyle.html
+++ b/category-lifestyle.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -8,9 +8,9 @@
     <title>Souvenir Lifestyle & Apparel Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
-        content="Pusat souvenir lifestyle & daily use custom: Tas Spunbond/Canvas, Payung Golf Promosi, Kaos Polo Bordir, dan Pouch Organizer. Iklan berjalan efektif untuk brand Anda.">
+        content="Vendor souvenir kantor lifestyle & daily use custom: Tas Spunbond/Canvas, Payung Golf Promosi, Kaos Polo Bordir, dan Pouch Organizer. Iklan berjalan efektif untuk brand Anda.">
     <meta name="keywords"
-        content="souvenir tas custom surabaya, vendor payung promosi, konveksi kaos polo bordir, souvenir pouch kulit, merchandise daily use corporate">
+        content="vendor souvenir kantor, souvenir tas custom surabaya, vendor payung promosi, konveksi kaos polo bordir, souvenir pouch kulit, merchandise daily use corporate">
     <meta name="author" content="Maroon Souvenir">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
