--- a/category-lifestyle.html
+++ b/category-lifestyle.html
@@ -210,46 +210,102 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Katalog Souvenir Lifestyle & Apparel",
-      "description": "Koleksi souvenir daily use custom logo. Tas, Payung, Kaos Polo, dan Pouch Organizer.",
-      "url": "https://hampersmalang.web.id/category-lifestyle",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Bags & Totebag",
-            "description": "Tas Spunbond, Canvas Totebag, dan Backpack Laptop Custom.",
-            "image": "https://maroonsouvenir.web.id/assets/lifestyle-bags.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Payung Promosi",
-            "description": "Payung Golf dan Payung Lipat dengan Sablon Logo.",
-            "image": "https://maroonsouvenir.web.id/assets/lifestyle-umbrella.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Apparel & Seragam",
-            "description": "Kaos Polo Bordir, Jaket, dan Topi Custom.",
-            "image": "https://maroonsouvenir.web.id/assets/lifestyle-apparel.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "Pouch & Clutch",
-            "description": "Travel organizer dan clutch kulit custom emboss.",
-            "image": "https://maroonsouvenir.web.id/assets/lifestyle-pouch.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Katalog Souvenir Lifestyle & Apparel",
+            "description": "Koleksi souvenir daily use custom logo. Tas, Payung, Kaos Polo, dan Pouch Organizer.",
+            "url": "https://hampersmalang.web.id/category-lifestyle",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Bags & Totebag",
+                        "description": "Tas Spunbond, Canvas Totebag, dan Backpack Laptop Custom.",
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-bags.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Payung Promosi",
+                        "description": "Payung Golf dan Payung Lipat dengan Sablon Logo.",
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-umbrella.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Apparel & Seragam",
+                        "description": "Kaos Polo Bordir, Jaket, dan Topi Custom.",
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-apparel.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "name": "Pouch & Clutch",
+                        "description": "Travel organizer dan clutch kulit custom emboss.",
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-pouch.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Lifestyle & Daily",
+                    "item": "https://hampersmalang.web.id/category-lifestyle"
+                }
+            ]
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+                {
+                    "@type": "Question",
+                    "name": "Berapa ukuran Payung Golf Promosi?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Payung Golf standar kami memiliki diameter jumbo 27-30 inch. Menggunakan rangka fiber anti-angin (windproof) yang kuat dan tidak mudah patah saat tertiup angin kencang."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Apakah Kaos Polo bisa dibordir nama satu per satu?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Ya, kami menyediakan layanan personalisasi (Variable Data Printing/Embroidery). Anda bisa mencantumkan nama karyawan atau divisi yang berbeda-beda pada setiap kaos polo atau jaket."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Apa perbedaan bahan Tas Canvas dan Blacu?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Blacu memiliki warna natural (krem/broken white), tekstur lebih tipis, dan harga lebih ekonomis. Canvas lebih tebal, serat lebih rapat, lebih kaku, dan tersedia dalam berbagai warna celup pabrik."
+                    }
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Leader Strategy) -->
@@ -467,4 +523,3 @@
 </body>
 
 </html>
-
