--- a/category-gadget.html
+++ b/category-gadget.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -8,7 +8,7 @@
     <title>Souvenir Gadget & Teknologi Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
-        content="Pusat souvenir gadget custom: Powerbank UV Print, Flashdisk Kartu/Metal, Speaker Bluetooth, dan Desk Accessories. Cocok untuk startup, WFH kit, dan corporate gift kekinian.">
+        content="Vendor souvenir gadget custom: Powerbank UV Print, Flashdisk Kartu/Metal, Speaker Bluetooth, dan Desk Accessories. Cocok untuk startup, WFH kit, dan corporate gift kekinian.">
     <meta name="keywords"
         content="souvenir powerbank custom, flashdisk kartu promosi, bluetooth speaker logo perusahaan, souvenir gadget surabaya, tech merchandise corporate">
     <meta name="author" content="Maroon Souvenir">
@@ -208,46 +208,102 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Katalog Souvenir Gadget & Teknologi",
-      "description": "Koleksi souvenir gadget custom logo untuk perusahaan. Powerbank, Flashdisk, Speaker Bluetooth, dan Aksesoris Meja Kerja.",
-      "url": "https://hampersmalang.web.id/category-gadget",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Powerbank Custom Logo",
-            "description": "Powerbank 10000mAh dengan UV Print Full Color.",
-            "image": "https://maroonsouvenir.web.id/assets/gadget-powerbank.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Flashdisk Promosi",
-            "description": "Flashdisk Kartu, Metal, dan Kulit Custom.",
-            "image": "https://maroonsouvenir.web.id/assets/gadget-flashdisk.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Bluetooth Speaker Premium",
-            "description": "Speaker portable dengan suara jernih dan branding elegan.",
-            "image": "https://maroonsouvenir.web.id/assets/gadget-speaker.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "Desk Accessories",
-            "description": "Mousepad gaming custom dan phone holder aluminium.",
-            "image": "https://maroonsouvenir.web.id/assets/gadget-desk.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Katalog Souvenir Gadget & Teknologi",
+            "description": "Koleksi souvenir gadget custom logo untuk perusahaan. Powerbank, Flashdisk, Speaker Bluetooth, dan Aksesoris Meja Kerja.",
+            "url": "https://hampersmalang.web.id/category-gadget",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Powerbank Custom Logo",
+                        "description": "Powerbank 10000mAh dengan UV Print Full Color.",
+                        "image": "https://hampersmalang.web.id/assets/gadget-powerbank.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Flashdisk Promosi",
+                        "description": "Flashdisk Kartu, Metal, dan Kulit Custom.",
+                        "image": "https://hampersmalang.web.id/assets/gadget-flashdisk.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Bluetooth Speaker Premium",
+                        "description": "Speaker portable dengan suara jernih dan branding elegan.",
+                        "image": "https://hampersmalang.web.id/assets/gadget-speaker.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "name": "Desk Accessories",
+                        "description": "Mousepad gaming custom dan phone holder aluminium.",
+                        "image": "https://hampersmalang.web.id/assets/gadget-desk.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Gadget & Tech",
+                    "item": "https://hampersmalang.web.id/category-gadget"
+                }
+            ]
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+                {
+                    "@type": "Question",
+                    "name": "Berapa kapasitas Powerbank yang tersedia?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Kami menyediakan Powerbank mulai dari 5.000 mAh (slim), 10.000 mAh (standard), hingga 20.000 mAh (high capacity). Semua menggunakan baterai Real Capacity dan aman untuk penerbangan (Flight Safe)."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Apakah ada garansi untuk produk elektronik?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Ya, kami memberikan Garansi Tukar Baru selama 6-12 bulan (tergantung merk) jika terjadi kerusakan fungsi bukan karena human error. Kami memastikan QC ketat sebelum pengiriman."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Bisakah Flashdisk diisi data presentasi dari awal?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Bisa. Kami menyediakan layanan Data Preload gratis untuk file hingga 1GB. Cocok untuk materi seminar, katalog produk, atau video profil perusahaan."
+                    }
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Leader Strategy) -->
@@ -469,5 +525,3 @@
 </body>
 
 </html>
-
-
