--- a/category-drinkware.html
+++ b/category-drinkware.html
@@ -207,46 +207,102 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Katalog Souvenir Tumbler & Drinkware",
-      "description": "Koleksi souvenir botol minum custom logo. Thermos Stainless, Sport Bottle, Mug Keramik, dan Tumbler Kekinian.",
-      "url": "https://hampersmalang.web.id/category-drinkware",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Vacuum Flask & Thermos",
-            "description": "Tumbler stainless tahan panas 12 jam dengan LED suhu.",
-            "image": "https://maroonsouvenir.web.id/assets/drinkware-thermos.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Sport Bottle",
-            "description": "Botol minum aluminium dan plastik BPA free.",
-            "image": "https://maroonsouvenir.web.id/assets/drinkware-sport.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Mug & Cangkir",
-            "description": "Mug keramik decal dan enamel vintage custom.",
-            "image": "https://maroonsouvenir.web.id/assets/drinkware-mug.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "Trendy Tumbler",
-            "description": "Tumbler estetik model kekinian dengan sedotan.",
-            "image": "https://maroonsouvenir.web.id/assets/drinkware-trendy.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Katalog Souvenir Tumbler & Drinkware",
+            "description": "Koleksi souvenir botol minum custom logo. Thermos Stainless, Sport Bottle, Mug Keramik, dan Tumbler Kekinian.",
+            "url": "https://hampersmalang.web.id/category-drinkware",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Vacuum Flask & Thermos",
+                        "description": "Tumbler stainless tahan panas 12 jam dengan LED suhu.",
+                        "image": "https://hampersmalang.web.id/assets/drinkware-thermos.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Sport Bottle",
+                        "description": "Botol minum aluminium dan plastik BPA free.",
+                        "image": "https://hampersmalang.web.id/assets/drinkware-sport.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Mug & Cangkir",
+                        "description": "Mug keramik decal dan enamel vintage custom.",
+                        "image": "https://hampersmalang.web.id/assets/drinkware-mug.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "name": "Trendy Tumbler",
+                        "description": "Tumbler estetik model kekinian dengan sedotan.",
+                        "image": "https://hampersmalang.web.id/assets/drinkware-trendy.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Drinkware & Tumbler",
+                    "item": "https://hampersmalang.web.id/category-drinkware"
+                }
+            ]
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+                {
+                    "@type": "Question",
+                    "name": "Apakah tumbler stainless bisa menahan panas/dingin?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Tergantung tipenya. Untuk tipe Vacuum Flask (dinding ganda), bisa menahan suhu panas/dingin hingga 8-12 jam. Sedangkan tipe single wall hanya untuk air suhu ruang."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Apakah materialnya aman untuk kesehatan (Food Grade)?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Pasti. Kami menjamin penggunaan material Stainless Steel SUS 304 yang Food Grade, anti-karat, dan bebas BPA. Aman digunakan sehari-hari."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Bisa cetak logo berapa warna?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Dengan teknologi UV Print, kami bisa mencetak logo Full Color, gradasi, hingga foto. Untuk hasil yang lebih elegan dan permanen, kami sarankan Laser Grafir (1 warna silver/gold hasil korekan bahan)."
+                    }
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Leader Strategy) -->
@@ -475,4 +531,3 @@
 </body>
 
 </html>
-
