--- a/category-eco.html
+++ b/category-eco.html
@@ -211,46 +211,102 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Katalog Souvenir Eco-Green Ramah Lingkungan",
-      "description": "Koleksi souvenir sustainable ESG: Bamboo Tumbler, Recycled Notebook, Eco Bag, dan Wooden Desk Set.",
-      "url": "https://hampersmalang.web.id/category-eco",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Bamboo Tumbler & Cutlery",
-            "description": "Tumbler bambu stainless 304 dan alat makan travel.",
-            "image": "https://maroonsouvenir.web.id/assets/eco-bamboo.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Recycled Notebook",
-            "description": "Buku catatan kertas daur ulang dengan pulpen eco.",
-            "image": "https://maroonsouvenir.web.id/assets/eco-notebook.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Tas Goni Eco Bag",
-            "description": "Goodie bag bahan goni dan spunbond ramah lingkungan.",
-            "image": "https://maroonsouvenir.web.id/assets/eco-bag.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "Wooden Desk Set",
-            "description": "Organizer meja kerja bahan kayu premium.",
-            "image": "https://maroonsouvenir.web.id/assets/eco-deskset.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Katalog Souvenir Eco-Green Ramah Lingkungan",
+            "description": "Koleksi souvenir sustainable ESG: Bamboo Tumbler, Recycled Notebook, Eco Bag, dan Wooden Desk Set.",
+            "url": "https://hampersmalang.web.id/category-eco",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Bamboo Tumbler & Cutlery",
+                        "description": "Tumbler bambu stainless 304 dan alat makan travel.",
+                        "image": "https://hampersmalang.web.id/assets/eco-bamboo.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Recycled Notebook",
+                        "description": "Buku catatan kertas daur ulang dengan pulpen eco.",
+                        "image": "https://hampersmalang.web.id/assets/eco-notebook.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Tas Goni Eco Bag",
+                        "description": "Goodie bag bahan goni dan spunbond ramah lingkungan.",
+                        "image": "https://hampersmalang.web.id/assets/eco-bag.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "name": "Wooden Desk Set",
+                        "description": "Organizer meja kerja bahan kayu premium.",
+                        "image": "https://hampersmalang.web.id/assets/eco-deskset.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Eco-Green (ESG)",
+                    "item": "https://hampersmalang.web.id/category-eco"
+                }
+            ]
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+                {
+                    "@type": "Question",
+                    "name": "Apakah bahan yang digunakan benar-benar ramah lingkungan?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Ya, kami menggunakan material biodegradable atau recyclable seperti Bambu Alami, Serat Gandum (Wheat Straw), Kain Goni (Jute), dan Kertas Daur Ulang. Produk ini dirancang untuk mengurangi limbah plastik sekali pakai."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Apakah hasil grafir di media bambu bisa hilang?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Tidak. Teknik Laser Engraving (Grafir) membakar permukaan bambu/kayu sehingga hasilnya permanen, tidak akan luntur atau terkelupas seumur hidup produk."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Berapa minimal order untuk produk custom bambu?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Minimal order rata-rata adalah 50 pcs untuk custom logo grafir. Namun untuk item tertentu seperti Tumbler Bambu, kami bisa melayani mulai dari 30 pcs."
+                    }
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Leader Strategy) -->
@@ -468,4 +524,3 @@
 </body>
 
 </html>
-
