--- a/category-executive.html
+++ b/category-executive.html
@@ -218,46 +218,72 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Katalog Souvenir Executive & VIP Gift Set",
-      "description": "Koleksi souvenir mewah untuk direksi dan klien prioritas. Leather set, hardbox, dan signature pen.",
-      "url": "https://hampersmalang.web.id/category-executive",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Leather Gift Set",
-            "description": "Agenda kulit dan pen metal dalam box eksklusif.",
-            "image": "https://hampersmalang.web.id/assets/executive-leather.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Premium Hardbox",
-            "description": "Packaging hardbox custom dengan poli emas.",
-            "image": "https://hampersmalang.web.id/assets/executive-hardbox.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Wallet & Card Holder",
-            "description": "Dompet kulit dan tempat kartu nama custom nama.",
-            "image": "https://hampersmalang.web.id/assets/executive-wallet.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "Signature Pen",
-            "description": "Pulpen metal premium style parker dengan grafir nama.",
-            "image": "https://hampersmalang.web.id/assets/executive-pen.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Katalog Souvenir Executive & VIP Gift Set",
+            "description": "Koleksi souvenir mewah untuk direksi dan klien prioritas. Leather set, hardbox, dan signature pen.",
+            "url": "https://hampersmalang.web.id/category-executive",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Leather Gift Set",
+                        "description": "Agenda kulit dan pen metal dalam box eksklusif.",
+                        "image": "https://hampersmalang.web.id/assets/executive-leather.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Premium Hardbox",
+                        "description": "Packaging hardbox custom dengan poli emas.",
+                        "image": "https://hampersmalang.web.id/assets/executive-hardbox.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Wallet & Card Holder",
+                        "description": "Dompet kulit dan tempat kartu nama custom nama.",
+                        "image": "https://hampersmalang.web.id/assets/executive-wallet.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "name": "Signature Pen",
+                        "description": "Pulpen metal premium style parker dengan grafir nama.",
+                        "image": "https://hampersmalang.web.id/assets/executive-pen.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Executive & VIP",
+                    "item": "https://hampersmalang.web.id/category-executive"
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Leader Strategy) -->
@@ -447,5 +473,3 @@
 </body>
 
 </html>
-
-
