--- a/category-express.html
+++ b/category-express.html
@@ -259,39 +259,65 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Layanan Souvenir Express & Ready Stock",
-      "description": "Koleksi souvenir ready stock gudang Surabaya yang bisa dicetak logo dalam 24 jam. Tumbler, Flashdisk, Notebook.",
-      "url": "https://hampersmalang.web.id/category-express",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Tumbler Ready Stock",
-            "description": "Tumbler stainless polos siap cetak UV/Grafir.",
-            "image": "https://hampersmalang.web.id/assets/express-tumbler.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Flashdisk Express",
-            "description": "USB Flashdisk kartu dan metal siap cetak kilat.",
-            "image": "https://hampersmalang.web.id/assets/express-usb.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Notebook Polos",
-            "description": "Buku agenda A5 polos ready stock siap hotprint.",
-            "image": "https://hampersmalang.web.id/assets/express-notebook.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Layanan Souvenir Express & Ready Stock",
+            "description": "Koleksi souvenir ready stock gudang Surabaya yang bisa dicetak logo dalam 24 jam. Tumbler, Flashdisk, Notebook.",
+            "url": "https://hampersmalang.web.id/category-express",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Tumbler Ready Stock",
+                        "description": "Tumbler stainless polos siap cetak UV/Grafir.",
+                        "image": "https://hampersmalang.web.id/assets/express-tumbler.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Flashdisk Express",
+                        "description": "USB Flashdisk kartu dan metal siap cetak kilat.",
+                        "image": "https://hampersmalang.web.id/assets/express-usb.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Notebook Polos",
+                        "description": "Buku agenda A5 polos ready stock siap hotprint.",
+                        "image": "https://hampersmalang.web.id/assets/express-notebook.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Express Service",
+                    "item": "https://hampersmalang.web.id/category-express"
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Solutif Strategy) -->
@@ -486,5 +512,3 @@
 </body>
 
 </html>
-
-
