--- a/category-gadget.html
+++ b/category-gadget.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="id">
 
 <head>
@@ -8,7 +8,7 @@
     <title>Souvenir Gadget & Teknologi Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
-        content="Vendor souvenir gadget custom: Powerbank UV Print, Flashdisk Kartu/Metal, Speaker Bluetooth, dan Desk Accessories. Cocok untuk startup, WFH kit, dan corporate gift kekinian.">
+        content="Pusat souvenir gadget custom: Powerbank UV Print, Flashdisk Kartu/Metal, Speaker Bluetooth, dan Desk Accessories. Cocok untuk startup, WFH kit, dan corporate gift kekinian.">
     <meta name="keywords"
         content="souvenir powerbank custom, flashdisk kartu promosi, bluetooth speaker logo perusahaan, souvenir gadget surabaya, tech merchandise corporate">
     <meta name="author" content="Maroon Souvenir">
