--- a/category-seminar.html
+++ b/category-seminar.html
@@ -219,46 +219,102 @@
 
     <!-- Schema Markup (AEO Optimized) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "CollectionPage",
-      "name": "Katalog Paket Seminar Kit Kantor",
-      "description": "Paket seminar kit murah, training kit kantor, dan onboarding kit karyawan baru.",
-      "url": "https://hampersmalang.web.id/category-seminar",
-      "mainEntity": {
-        "@type": "ItemList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Paket Basic",
-            "description": "Seminar kit murah meriah: Tas Spunbond + Blocknote + Pulpen.",
-            "image": "https://maroonsouvenir.web.id/assets/seminar-basic.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Paket Standard",
-            "description": "Training kit kantor: Tas Canvas + Tumbler + Notebook.",
-            "image": "https://maroonsouvenir.web.id/assets/seminar-standard.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Paket Premium VIP",
-            "description": "Gift set eksklusif Hardbox, Powerbank, Tumbler Stainless.",
-            "image": "https://maroonsouvenir.web.id/assets/seminar-premium.png"
-          },
-          {
-            "@type": "ListItem",
-            "position": 4,
-            "name": "Onboarding Kit",
-            "description": "Welcome pack karyawan baru: Hoodie, Laptop Sleeve, Box Custom.",
-            "image": "https://maroonsouvenir.web.id/assets/seminar-onboarding.png"
-          }
-        ]
-      }
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "CollectionPage",
+            "name": "Katalog Paket Seminar Kit Kantor",
+            "description": "Paket seminar kit murah, training kit kantor, dan onboarding kit karyawan baru.",
+            "url": "https://hampersmalang.web.id/category-seminar",
+            "mainEntity": {
+                "@type": "ItemList",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Paket Basic",
+                        "description": "Seminar kit murah meriah: Tas Spunbond + Blocknote + Pulpen.",
+                        "image": "https://hampersmalang.web.id/assets/seminar-basic.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Paket Standard",
+                        "description": "Training kit kantor: Tas Canvas + Tumbler + Notebook.",
+                        "image": "https://hampersmalang.web.id/assets/seminar-standard.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "Paket Premium VIP",
+                        "description": "Gift set eksklusif Hardbox, Powerbank, Tumbler Stainless.",
+                        "image": "https://hampersmalang.web.id/assets/seminar-premium.png"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "name": "Onboarding Kit",
+                        "description": "Welcome pack karyawan baru: Hoodie, Laptop Sleeve, Box Custom.",
+                        "image": "https://hampersmalang.web.id/assets/seminar-onboarding.png"
+                    }
+                ]
+            }
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Beranda",
+                    "item": "https://hampersmalang.web.id/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Katalog",
+                    "item": "https://hampersmalang.web.id/products"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Seminar & Training Kit",
+                    "item": "https://hampersmalang.web.id/category-seminar"
+                }
+            ]
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+                {
+                    "@type": "Question",
+                    "name": "Berapa minimal order untuk paket seminar kit?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Minimal pemesanan standar adalah 50 paket. Untuk pemesanan di bawah itu (misal 20-30 pcs) tetap bisa dilayani dengan penyesuaian harga atau memilih item Ready Stock."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Apakah bisa custom isi paket sesuai budget?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Sangat bisa. Paket di atas hanya referensi. Anda bebas melakukan Mix & Match, misalnya mengganti Tumbler Plastik dengan Botol Stainless, atau menambahkan Flashdisk ke dalam paket."
+                    }
+                },
+                {
+                    "@type": "Question",
+                    "name": "Berapa lama proses produksi seminar kit?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Estimasi waktu pengerjaan normal adalah 7-10 hari kerja setelah desain disetujui. Untuk kebutuhan mendesak (deadline < 5 hari), kami sarankan mengambil layanan Rush Order dengan item Ready Stock."
+                    }
+                }
+            ]
+        }
+    ]
     </script>
 
     <!-- SEO Description (Leader Strategy) -->
@@ -480,4 +536,3 @@
 </body>
 
 </html>
-
